[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Mimi.gd" type="Script" id=1]
[ext_resource path="res://Assets/Mimi/MimiAnimation.gltf" type="PackedScene" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.747787

[node name="Mimi" type="KinematicBody"]
collision_layer = 3
collision_mask = 5
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="CamBase" type="Spatial" parent="."]
visible = false

[node name="ClippedCamera" type="ClippedCamera" parent="CamBase"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 6 )
current = true

[node name="EnergyBar" type="ProgressBar" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 220.0
margin_bottom = 34.0
step = 0.1
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="MimiAnimation" parent="." instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[connection signal="timeout" from="RestTimer" to="." method="_on_RestTimer_timeout"]

[editable path="MimiAnimation"]
